[gd_scene load_steps=3 format=3 uid="uid://dujisv8k7etk0"]

[ext_resource type="Script" path="res://tests/test_terminal_window.gd" id="1_egu51"]
[ext_resource type="PackedScene" uid="uid://8mg0subnb03v" path="res://terminal_window.tscn" id="1_p8id4"]

[node name="TestTerminalWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egu51")

[node name="TerminalWindow" parent="." instance=ExtResource("1_p8id4")]

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 187.0
offset_right = 1135.0
offset_bottom = 256.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 773.0
offset_top = 350.0
offset_right = 888.0
offset_bottom = 381.0
text = "send new line"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 984.0
offset_top = 369.0
offset_right = 1065.0
offset_bottom = 400.0
text = "clear text"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 224.0
offset_right = 672.0
offset_bottom = 244.0

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
